Dibuat menggunakan Colaboratory

--- a/UAS/03_pytorch_computer_vision.ipynb
+++ b/UAS/03_pytorch_computer_vision.ipynb
@@ -61,7 +61,7 @@
         "id": "GaeYzOTLwWh2",
         "outputId": "3879a188-3bd9-46ad-d7a5-938b0ff7dd79"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
         "id": "DNwZLMbCzJLk",
         "outputId": "38079ba5-2d2b-412b-bbea-542be635d59a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Pengawasan Keamanan: Penggunaan kamera CCTV untuk memonitoring dan mendeteksi aktivitas mencurigakan.\n",
+        "Otomotif: Mobil otonom menggunakan computer vision untuk mengenali lingkungan sekitar.\n",
+        "Kesehatan: Analisis citra medis untuk mendeteksi penyakit dan kelainan."
+      ],
       "metadata": {
         "id": "VyWRkvWGbCXj"
       },
@@ -151,7 +155,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Overfitting adalah situasi di mana model machine learning terlalu baik dalam mempelajari data pelatihan sehingga kehilangan kemampuannya untuk mengeneralisasi pada data yang tidak dilihat sebelumnya."
+      ],
       "metadata": {
         "id": "d1rxD6GObCqh"
       },
@@ -170,7 +176,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Penggunaan Data Regularisasi: Menambahkan hukuman pada bobot model untuk menghindari kompleksitas yang berlebihan.\n",
+        "Cross-Validation: Memecah data menjadi beberapa bagian dan menggunakan satu bagian sebagai validasi untuk mengukur kinerja model.\n",
+        "Dropout: Teknik di mana neuron secara acak diabaikan selama pelatihan untuk mencegah ketergantungan yang berlebihan pada subset fitur tertentu."
+      ],
       "metadata": {
         "id": "ocvOdWKcbEKr"
       },
@@ -226,7 +236,7 @@
         },
         "outputId": "ec8b7c17-cc0c-4894-94fd-44dc3e4c2c0a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,7 +360,7 @@
         },
         "outputId": "65f7fcf1-a974-4dde-fbde-d1fff53cf69f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -385,7 +395,7 @@
       "metadata": {
         "id": "ALA6MPcFbJXQ"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -425,7 +435,7 @@
       "metadata": {
         "id": "5IKNF22XbKYS"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -464,7 +474,7 @@
         },
         "outputId": "096f61c5-11f5-496a-d4ed-c0651348fa2c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,7 +524,7 @@
         },
         "outputId": "05607b8d-4e50-4000-acef-1e8034d2d37b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -570,7 +580,7 @@
         },
         "outputId": "7e20692f-a8bc-4bcb-911d-c8079801a104"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -613,7 +623,7 @@
         },
         "outputId": "34e79f61-5559-4243-bf50-b02cb7df374d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,7 +690,7 @@
         },
         "outputId": "460d62d5-d004-4b3c-b83c-7542a1b84c6e"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
